# platform.core.telephony.tel-plugin-packetservice

./: .gitignore  CMakeLists.txt  README  project.config  tel-plugin-packetservice.manifest
debian/: changelog  control  rules  tel-plugin-packetservice.install.in  tel-plugin-packetservice.postinst
include/: main.h  packet-services.h  ps-context.h  ps-error.h  ps-master.h  ps-modem.h  ps-service.h  ps.h  ps_common.h  ps_log.h  ps_main.h
interfaces/: ps-iface-context.xml  ps-iface-master.xml  ps-iface-modem.xml  ps-iface-service.xml
introspection/: context.xml  master.xml  modem.xml  service.xml
packaging/: 0001-Support-sysconfdir-in-the-makefile.patch  0001-main-Create-modems-only-when-one-modem-is-added.patch  0002-dnet_db_data-Change-SFR-internet-APN-and-add-Bouygue.patch  0003-context-Fix-context-creation-issue.patch  tel-plugin-packetservice.changes  tel-plugin-packetservice.spec  tel-plugin-ps.conf
resources/: 520.tel-plugin-packetservice.patch.sh  apns-conf.xml  dnet_db.sql  dnet_db_data.sql  dnet_db_init.sql
resources/3g/: dnet_db_init.sql
resources/lte/: dnet_db_init.sql
resources/tv/: dnet_db_init.sql
src/: context.c  desc-ps.c  desc.c  dump_packetservice.sh  error.c  main.c  master.c  modem.c  ps-plugin.conf  ps_context.c  ps_log.c  ps_main.c  ps_master.c  ps_modem.c  ps_service.c  ps_tcore-interface.c  ps_util.c  service.c  tcore-interface.c  util.c
test_src/: CMakeLists.txt  main.c
